feat: re-design the overview page Just have four big buttons at first, and offer a detailed explanation for those who want to know.

--- a/style.css
+++ b/style.css
@@ -54,3 +54,19 @@ span.label {
 	padding: 5px;
 	font-size: 0.9em;
 }
+
+.btn-group button {
+  background-color: #04AA6D; /* Green background */
+  border: 1px solid green; /* Green border */
+  border-radius: 12px;
+  color: white; /* White text */
+  font-size: 120%;
+  padding: 10px 44px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+  /* float: left; Float the buttons side by side */
+}
+
+/* Add a background color on hover */
+.btn-group button:hover {
+  background-color: #3e8e41;
+}
